# tts_cli_rs

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  config.toml  todo.md
.github/workflows/: release.yml
src/: args.rs  config.rs  lib.rs  main.rs
src/tts/: azure.rs  mod.rs  param.rs
src/utils/: audio_util.rs  mod.rs  time_util.rs
