[package]
name = "tts_cli_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
structopt = "0.3.26"
reqwest = { version = "0.12.3", features = ["default", "blocking", "json"] }
tokio = { version = "1", features = ["full"] }
soloud = "1.0.5"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"
